Change for Java 8, new intellij, new Gradle and SonarQube